# libsikuli

./: CMakeLists.txt  README  setup.py  sikuli-python.i
Sikuli/: README  RegionTestSuite.h  clickApple.rb  cv-util.h  extconf.rb  finder.cpp  finder.h  glgrab.c  keys.h  ocr.cpp  ocr.h  pyramid-template-matcher.h  region.cpp  region.h  robot.cpp  robot.h  runner.cpp  screen.cpp  screen.h  setup.py  sikuli-python.i  sikuli.i  sikuli_wrap.cxx  vision.h
Sikuli/examples/python/: click.py  mute.py  mute_using_with.py
Sikuli/src/: RegionTestSuite.h  TempTestSuite.h  finder.cpp  glgrab.h  keys.h  location.cpp  main.cpp  ocr.h  pattern.cpp  pattern.h  region.cpp  region.h  result.h  robot.cpp  runner.cpp  screen.h  vision.cpp  vision.h
Sikuli/test/: server.rb
examples/cplusplus/: play-bejeweled.cpp
examples/cpp/: CMakeLists.txt  play-bejeweled.cpp  play-whackamole.cpp  sikulicmd.cpp
examples/python/: mute.py
examples/ruby/: mute.rb
interfaces/java/: make.sh  sikuli-java.i  test.java
interfaces/java/vision/: make.sh  vision.i
interfaces/python/: run_swig.sh  setup.py  sikuli-python.i  sikuli-python_wrap.cxx  sikuli-python_wrap.h  sikuli.py
interfaces/python/src/sikuli/: __init__.py  imreadhelper.py  libsikuli.py  sikuli-python_wrap.cxx  sikuli-python_wrap.h
interfaces/ruby/: extconf.rb  run_swig.sh  sikuli-ruby.i  sikuli-ruby_wrap.cxx  sikuli-ruby_wrap.h
research/java/guiHistory/src/: FileDocument.java  FilmStrip.java  Lense.java  ScreenshotViewer.java  Shot.java  ShotTile.java  ShotTileEvent.java  ShotTileEventListener.java
research/java/guiHistory/src/examples/: Adapter.java  AnImage.java  Lines.java  MovingWindow.java  Points.java  Rectangles.java  RigidArea.java  Simple.java  TipOfDay.java
research/java/guiHistory/src/history/: HistoryScreen.java  HistoryScreenDatabase.java  HistoryViewer.java  OCRDocument.java  Screen.java
research/java/guiHistory/src/sikuli/: CapturePrompt.java  Observer.java  Region.java  Screen.java  ScreenImage.java  Subject.java  UnionScreen.java
research/java/guiHistory/testdata/ocr/: amazon1.png.ocr.txt  amazon2.png.ocr.txt  amazon3.png.ocr.txt  amazon4.png.ocr.txt  amazon5.png.ocr.txt  amazon6.png.ocr.txt  chi1.png.ocr.txt  chi2.png.ocr.txt  chi3.png.ocr.txt  chi4.png.ocr.txt  finder1.png.ocr.txt  finder2.png.ocr.txt  word1.png.ocr.txt  word2.png.ocr.txt
research/java/tutor/: nih.sh  tutor.py
research/java/tutor/nihsenior.sikuli/: nihsenior.html  nihsenior.py
research/java/tutor/src/org/sikuli/: Artist.java  CalloutBox.java  ClickOverlay.java  GravityHighlighter.java  MessageOverlay.java  SimpleBox.java  ToolTip.java  Tutor.java
research/java/tutor/src/org/sikuli/guide/: ScreenAnnotator.java
research/src/: screen-imgproc.cpp  screen-imgproc.h
research/src/main/java/db/: DerbyDB.java
research/src/main/java/history/: Annotation.java  AnnotationArrow.java  AnnotationHighlight.java  AnnotationRectangle.java  AnnotationText.java  AutoResize.java  FileDocument.java  FindResult.java  HistoryQuery.java  HistoryScreen.java  HistoryScreenDatabase.java  HistoryScreenImage.java  HistoryViewer.java  HistoryViewerFrame.java  ImageUtil.java  Lens.java  Lense.java  MatchViewer.java  MoveMouseListener.java  OCRDocument.java  Rectangles.java  Screen.java  ScreenImage.java  ScriptEditor.java  Sikuli.java  SikuliVision.java  TriggerEditor.java
research/src/main/java/history/controls/: FloatingBar.java  NavigationControl.java  NavigationIterator.java  NavigationListener.java  SimpleSearchBox.java  Toolbar.java
research/src/main/java/org/sikuli/history/: Annotation.java  AnnotationArrow.java  AnnotationHighlight.java  AnnotationRectangle.java  AnnotationText.java  AutoResize.java  FileDocument.java  FindResult.java  HistoryQuery.java  HistoryScreen.java  HistoryScreenDatabase.java  HistoryScreenImage.java  HistoryViewer.java  HistoryViewerFrame.java  ImageUtil.java  Lens.java  MatchViewer.java  MoveMouseListener.java  OCRDocument.java  Rectangles.java  ScreenImage.java  ScriptEditor.java  Sikuli.java  SikuliVision.java
research/src/main/java/sikuli/: Clipboard.java  CurrentLineHighlighter.java  Debug.java  ImageButton.java  Location.java  Observer.java  SikuliEditorKit.java  SikuliPane.java  SikuliView.java  SikuliViewFactory.java  Utils.java
research/src/test/cpp/: cvgui_test.cpp  cvgui_test.h  generate_cxxtests.sh  main_cxxtest.cpp
sikuli.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  CoreTestSuite.h  FlashTestSuite.h  RegionTestSuite.h  TempTestSuite.h  config.h  config.h.cmake  cv-util.cpp  cv-util.h  event-manager.cpp  event-manager.h  exceptions.h  finder.cpp  finder.h  glgrab.c  keys.h  location.h  ocr.cpp  ocr.h  pattern.cpp  pattern.h  pyramid-template-matcher.h  region.cpp  region.h  result.h  robot.cpp  robot.h  runner.cpp  screen-image.cpp  screen-image.h  screen.cpp  screen.h  settings.cpp  settings.h  sikuli-python_wrap.cxx  sikuli-python_wrap.h  sikuli-ruby_wrap.cxx  sikuli.cpp  sikuli.h  ui.cpp  (+3 more)
src/main/cpp/os/: robot.cpp  robot.h
src/main/cpp/sikuli/: event-manager.cpp  event-manager.h  exceptions.h  location.h  pattern.cpp  pattern.h  region.cpp  region.h  screen-image.cpp  screen-image.h  screen.cpp  screen.h  sikuli.cpp  ui.cpp
src/main/cpp/vision/: cvgui.cpp  cvgui.h  finder.cpp  tessocr.cpp  tessocr.h  vision.cpp  vision.h
src/test/: CMakeLists.txt  CoreTestSuite.cpp  CoreTestSuite.h  FlashTestSuite.cpp  FlashTestSuite.h  MacTestSuite.cpp  MacTestSuite.h  generate_cxxtests.sh  main_cxxtest.cpp
test/flash/: test.py
test/flash/SikuliTester/: .actionScriptProperties  .project
test/flash/SikuliTester/src/: SikuliTester.mxml
test/flash/www/: SikuliTester.html  SikuliTester.swf
(+11 files in other folders)
